Implement API authentication with Sanctum and update integration getstream io

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+.env
+.env.backup
+.env.production
+package-lock.json
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
