Update .env.example with default configuration values for local development

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:RhvQ2/uS0i91MSx0tX8OzG4uS9VVeduNxHL6UUPepbM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
+FRONTEND_URL=http://127.0.0.1:5173
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,17 +22,20 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_DATABASE=chat_minimalis
+DB_USERNAME=root
+DB_PASSWORD=
 
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DRIVER=file
+SESSION_LIFETIME=1200
+# SESSION_ENCRYPT=false
+# SESSION_PATH=/
+SESSION_DOMAIN=.ngrok-free.app
+SESSION_SECURE_COOKIE=true
+SESSION_SAME_SITE=none
+SESSION_PARTITIONED_COOKIE=true
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -63,3 +67,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+SANCTUM_STATEFUL_DOMAINS=127.0.0.1:5173
+
+# ==================================
+# GETSTREAM CHAT CONFIGURATION
+# ==================================
+STREAM_API_KEY="YOUR_API_KEY"
+STREAM_API_SECRET="YOUR_API_SECRET"
