--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Chat Minimalis - GetstreamIO",
+  "name": "Chat-Minimalis",
   "private": true,
   "version": "0.0.0",
   "type": "module",
