Update APP_KEY placeholder in .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:RhvQ2/uS0i91MSx0tX8OzG4uS9VVeduNxHL6UUPepbM=
+APP_KEY=YOUR_APP_KEY
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 FRONTEND_URL=http://127.0.0.1:5173
